--- a/packages/com.ovaremake.core.hd.field/meta/package.xml
+++ b/packages/com.ovaremake.core.hd.field/meta/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package>
-    <DisplayName>HD Minigames</DisplayName>
-    <Description>HD resources for minigames</Description>
+    <DisplayName>HD Fields</DisplayName>
+    <Description>HD resources for fields</Description>
     <Version>0.1.0-1</Version>
     <ReleaseDate>2015-08-06</ReleaseDate>
     <!--<Script>installscript.qs</Script>-->
-    <Name>com.ovaremake.hd.minigame</Name>
-    <SortingPriority>4</SortingPriority>
+    <Name>com.ovaremake.core.hd.field</Name>
+    <SortingPriority>5</SortingPriority>
     <RequiresAdminRights>true</RequiresAdminRights>
 </Package>
