Add custom page

--- a/packages/com.ovaremake.core/meta/package.xml
+++ b/packages/com.ovaremake.core/meta/package.xml
@@ -15,6 +15,7 @@
     
     <UserInterfaces>
         <UserInterface>targetwidget.ui</UserInterface>
+        <UserInterface>componentwidget.ui</UserInterface>
     </UserInterfaces>
     
 </Package>
