--- a/packages/com.ovaremake.core.orchestra_music/meta/package.xml
+++ b/packages/com.ovaremake.core.orchestra_music/meta/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package>
-    <DisplayName>Alternative sound srack</DisplayName>
-    <Description>Alternative sound track</Description>
+    <DisplayName>Orchesta sound srack</DisplayName>
+    <Description>Orchesta sound track</Description>
     <Version>0.1.0-1</Version>
     <ReleaseDate>2015-08-06</ReleaseDate>
     <!--<Script>installscript.qs</Script>-->
-    <Name>com.ovaremake.core.music</Name>
+    <Name>com.ovaremake.core.orchestra_music</Name>
     <SortingPriority>3</SortingPriority>
     <RequiresAdminRights>true</RequiresAdminRights>
 </Package>
