--- a/packages/com.ovaremake.core.original_music/meta/package.xml
+++ b/packages/com.ovaremake.core.original_music/meta/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package>
-    <DisplayName>FF7 OVA Remake English</DisplayName>
-    <Description>English version</Description>
+    <DisplayName>Original sound srack</DisplayName>
+    <Description>Original sound track</Description>
     <Version>0.1.0-1</Version>
     <ReleaseDate>2015-08-06</ReleaseDate>
     <!--<Script>installscript.qs</Script>-->
-    <Name>com.ovaremake.core.en</Name>
-    <SortingPriority>9</SortingPriority>
+    <Name>com.ovaremake.core.original_music</Name>
+    <SortingPriority>3</SortingPriority>
     <RequiresAdminRights>true</RequiresAdminRights>
     <Default>true</Default>
 </Package>
