--- a/packages/com.ovaremake.core.hd.battles/meta/package.xml
+++ b/packages/com.ovaremake.core.hd.battles/meta/package.xml
@@ -5,7 +5,7 @@
     <Version>0.1.0-1</Version>
     <ReleaseDate>2015-08-06</ReleaseDate>
     <!--<Script>installscript.qs</Script>-->
-    <Name>com.ovaremake.core.hd.battle</Name>
+    <Name>com.ovaremake.core.hd.battles</Name>
     <SortingPriority>6</SortingPriority>
     <RequiresAdminRights>true</RequiresAdminRights>    
 </Package>
