--- a/packages/com.ovaremake.core.hd.fields.models/meta/package.xml
+++ b/packages/com.ovaremake.core.hd.fields.models/meta/package.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package>
-    <DisplayName>Original sound srack</DisplayName>
-    <Description>Original sound track</Description>
+    <DisplayName>HD Field Models</DisplayName>
+    <Description>HD resources for fields</Description>
     <Version>0.1.0-1</Version>
     <ReleaseDate>2015-08-06</ReleaseDate>
     <!--<Script>installscript.qs</Script>-->
-    <Name>com.ovaremake.core.original_music</Name>
-    <SortingPriority>3</SortingPriority>
+    <Name>com.ovaremake.core.hd.fields.models</Name>
+    <SortingPriority>5</SortingPriority>
     <RequiresAdminRights>true</RequiresAdminRights>
-    <Default>true</Default>
 </Package>
