--- a/packages/com.ovaremake.core.music.original/meta/package.xml
+++ b/packages/com.ovaremake.core.music.original/meta/package.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package>
-    <DisplayName>HD Fields</DisplayName>
-    <Description>HD resources for fields</Description>
+    <DisplayName>Original sound srack</DisplayName>
+    <Description>Original sound track</Description>
     <Version>0.1.0-1</Version>
     <ReleaseDate>2015-08-06</ReleaseDate>
     <!--<Script>installscript.qs</Script>-->
-    <Name>com.ovaremake.core.hd.field</Name>
-    <SortingPriority>5</SortingPriority>
+    <Name>com.ovaremake.core.music.original</Name>
+    <SortingPriority>3</SortingPriority>
     <RequiresAdminRights>true</RequiresAdminRights>
+    <Default>true</Default>
 </Package>
