--- a/packages/com.ovaremake.core/data/ff7_opengl.cfg
+++ b/packages/com.ovaremake.core/data/ff7_opengl.cfg
@@ -8,17 +8,17 @@
 # set the window size (or fullscreen resolution) of FF7
 # 0 means use original resolution in window mode, your current desktop resolution will be used in fullscreen mode
 # preserve_aspect adds black borders as needed to preserve a 4:3 aspect ratio
-window_size_x = 800
-window_size_y = 600
-preserve_aspect = off
-fullscreen = on
+window_size_x = 1024
+window_size_y = 768
+preserve_aspect = yes
+fullscreen = no
 
 # mod directory
 # subdirectroy of mods/ where textures will be loaded from
-mod_path = none
+mod_path = Textures
 
 # check your Nvidia/ATI/Intel control panel settings if this option doesn't seem to work
-enable_vsync = off
+enable_vsync = yes
 
 # allow FF7 to use linear filtering for its textures
 # some things look slightly better with this option on, but alot of textures just lose their detail
@@ -27,7 +27,7 @@ linear_filter = off
 
 # plugin used to play music, VGMstream requires a set of looping .ogg files in the music/vgmstream folder.
 # If no music plugin is loaded the game will play MIDI as usual but FF7Music will NOT work.
-music_plugin = plugins/vgmstream_music.fgp
+#music_plugin = plugins/vgmstream_music.fgp
 
 
 
@@ -42,7 +42,7 @@ mdef_fix = yes
 
 # post-processing shader, used to apply fullscreen effects
 post_source = shaders/bloom2.post
-enable_postprocessing = no
+enable_postprocessing = off
 
 
 
@@ -53,10 +53,10 @@ enable_postprocessing = no
 fancy_transparency = on
 
 # display frames per second counter in upper right corner
-show_fps = no
+show_fps = on
 
 # display some real-time debug information
-show_stats = no
+show_stats = off
 
 # store external textures in a compressed cache for increased performance
 # compression is not lossless, some artifacts may appear when this option is in use
@@ -66,7 +66,7 @@ compress_textures = no
 
 # max size of the texture cache to hold in RAM, in megabytes
 # don't set it any higher than 1GB unless you want your game to crash
-texture_cache_size = 256
+texture_cache_size = 512
 
 # use pixel buffer objects to speed up texture loading
 # might crash horribly on ATI cards but should work for NVIDIA users
@@ -89,15 +89,9 @@ movie_plugin = plugins/ffmpeg_movies.fgp
 # read files directly instead of using LGP archives
 # for example; if FF7 is looking for aaab.rsd in char.lgp, this option will make it open direct/char/aaab.rsd first,
 # if this file doesn't exist it will look for the original in the LGP archive
+direct_mode = yes
 
 # show every failed attempt at loading a .png texture
-show_missing_textures = no
+show_missing_textures = yes
 
-
-##direct_mode = on
-##mod_path = DK
-
-
-load_library = FF7anyCD.dll
-load_library = FF7anyCD.dll
-#mod_path = Bootleg
+#load_library = FF7anyCD.dll
