check for installation disk

--- a/packages/com.ovaremake.core/data/ff7_opengl.cfg
+++ b/packages/com.ovaremake.core/data/ff7_opengl.cfg
@@ -15,10 +15,10 @@ fullscreen = no
 
 # mod directory
 # subdirectroy of mods/ where textures will be loaded from
-mod_path = Textures
+mod_path = OvaRemake
 
 # check your Nvidia/ATI/Intel control panel settings if this option doesn't seem to work
-enable_vsync = yes
+enable_vsync = no
 
 # allow FF7 to use linear filtering for its textures
 # some things look slightly better with this option on, but alot of textures just lose their detail
@@ -94,4 +94,4 @@ direct_mode = yes
 # show every failed attempt at loading a .png texture
 show_missing_textures = yes
 
-#load_library = FF7anyCD.dll
+load_library = FF7anyCD.dll
