--- a/packages/com.ovaremake.core/data/ff7_opengl.cfg
+++ b/packages/com.ovaremake.core/data/ff7_opengl.cfg
@@ -8,10 +8,10 @@
 # set the window size (or fullscreen resolution) of FF7
 # 0 means use original resolution in window mode, your current desktop resolution will be used in fullscreen mode
 # preserve_aspect adds black borders as needed to preserve a 4:3 aspect ratio
-window_size_x = 1024
-window_size_y = 768
+window_size_x = 0
+window_size_y = 0
 preserve_aspect = yes
-fullscreen = off
+fullscreen = yes
 
 # mod directory
 # subdirectroy of mods/ where textures will be loaded from
@@ -93,4 +93,3 @@ direct_mode = off
 
 # show every failed attempt at loading a .png texture
 show_missing_textures = no
-
